--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
+# os
+*~
+.DS_*
+.svn/
+.cvs/
+.hg/
+*.bak
+*.swp
+Thumbs.db
 
-.DS_Store
-node_modules
-vendor
+# node
+.env
+.env.local
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+node_modules/
+
+# composer
+vendor/
+
+# theme
+build/
+pa11y-ci-report/
