use `image-minimizer-webpack-plugin` instead of `imagemin-webpack-plugin`

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
 		"css-minimizer-webpack-plugin": "^6.0.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-webpack-plugin": "^4.0.1",
-		"imagemin-webpack-plugin": "2.4.2",
 		"imagemin-svgo": "10.0.1",
+		"imagemin-webpack-plugin": "2.4.2",
 		"postcss-loader": "^8.0.0",
 		"postcss-move-props-to-bg-image-query": "^4.0.0",
 		"postcss-preset-env": "^9.3.0",
@@ -47,6 +47,8 @@
 		"autoprefixer": "^10.4.17",
 		"css-loader": "^6.9.1",
 		"glob": "^10.3.10",
+		"image-minimizer-webpack-plugin": "^4.0.0",
+		"imagemin": "^8.0.1",
 		"mini-css-extract-plugin": "^2.7.7",
 		"npm-run-all": "^4.1.5",
 		"pa11y-ci": "^2.4.2",
