--- a/package.json
+++ b/package.json
@@ -73,6 +73,6 @@
 		"report": "composer run-script report",
 		"packages-update": "wp-scripts packages-update",
 		"postinstall": "npx lefthook install",
-		"start": "cross-env NODE_ENV=development wp-scripts start"
+		"start": "cross-env NODE_ENV=development wp-scripts start --config webpack.prod.js"
 	}
 }
