--- a/.github/workflows/assertions.yml
+++ b/.github/workflows/assertions.yml
@@ -1,67 +1,71 @@
-name: Assertions
+name: Code Quality
 
 on:
     pull_request:
-        branches: main
+    push:
+        branches:
+            - main
 
-    workflow_dispatch:
+# Cancel previous workflow run groups that have not completed.
+concurrency:
+    # Group workflow runs by workflow name, along with the head branch ref of the pull request
+    # or otherwise the branch or tag ref.
+    group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
+    cancel-in-progress: true
 
 jobs:
-    lint:
+    lint-css:
+        name: 'Lint: CSS'
         runs-on: ubuntu-latest
-
-        strategy:
-            matrix:
-                node-version: [20.x]
-                php-versions: ['8.2']
-
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v2
-              with:
-                  token: ${{ github.token }}
+            - name: Checkout
+              uses: actions/checkout@v3
 
-            - name: Setup PHP ${{ matrix.php-versions }}
+            - name: Setup Node
+              uses: actions/setup-node@v3.4.1
+              with:
+                  node-version-file: '.nvmrc'
+                  cache: npm
+
+            - name: Install Node dependencies
+              run: npm ci
+              env:
+                  CI: true
+
+            - name: Detect coding standard violations (stylelint)
+              run: npm run lint:css
+
+    lint-php:
+        name: 'Lint: PHP'
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Setup PHP
               uses: shivammathur/setup-php@v2
               with:
-                  php-version: ${{ matrix.php-versions }}
-                  tools: composer:v2, phpcs
+                  php-version: '8.0'
+                  coverage: none
+                  tools: cs2pr
 
-            - name: Setup Node ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
+            - name: Get Composer Cache Directory
+              id: composer-cache
+              run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+            - name: Configure Composer cache
+              uses: actions/cache@v3.0.6
               with:
-                  node-version: ${{ matrix.node-version }}
-
-            - name: Use NPM 10
-              run: npm i -g npm@10
-
-            - name: Cache Node dependencies
-              uses: actions/cache@v2
-              with:
-                  path: ~/.npm
-                  key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
-                  restore-keys: ${{ runner.OS }}-node-
-
-            - name: Cache Composer dependencies
-              uses: actions/cache@v2
-              with:
-                  path: /tmp/composer-cache
+                  path: ${{ steps.composer-cache.outputs.dir }}
                   key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-                  restore-keys: ${{ runner.OS }}-composer-
+                  restore-keys: |
+                      ${{ runner.os }}-composer-
 
-            - name: Authorize Composer with WDS packagist server
-              run: echo '${{ secrets.COMPOSER_AUTH }}' > $GITHUB_WORKSPACE/auth.json
+            - name: Install Composer dependencies
+              run: composer install --prefer-dist --optimize-autoloader --no-progress --no-interaction
 
-            - name: Install dependencies
-              run: |
-                  composer install --quiet
-                  npm ci --legacy-peer-deps --ignore-scripts --no-fund --no-audit --quiet
+            - name: Validate composer.json
+              run: composer --no-interaction validate --no-check-all
 
-            - name: Lint PHP
-              run: npm run lint:php
-
-            - name: Lint scripts
-              run: npm run lint:js
-
-            - name: Lint styles
-              run: npm run lint:css
+            - name: Detect coding standard violations (PHPCS)
+              run: vendor/bin/phpcs -q --report=checkstyle --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 | cs2pr --graceful-warnings
