--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -1,20 +1,21 @@
-name: A11y Test
+name: UI Check Workflows
 
 on:
     push:
-        branches: [main] ## Change the branch name to match yours
+        paths: 'actions/ui-check/**'
     pull_request:
-        branches: [main] ## Change the branch name to match yours
+        paths: 'actions/ui-check/**'
 
 jobs:
     run_tests:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Theme Test
-              id: test
-              uses: Wordpress/theme-review-action@trunk
-              with:
-                  root-folder: .
-                  accessible-ready: true
-                  ui-debug: true
+            - uses: actions/checkout@v2
+
+            - name: Run sanity checks on ui tests
+              run: |
+                  npm install
+                  npm run test:e2e:sanity
+                  npm run test:unit:sanity
+              working-directory: actions/ui-check
