--- a/.github/workflows/ui-check.yml
+++ b/.github/workflows/ui-check.yml
@@ -21,6 +21,7 @@ jobs:
       id: test
       uses: Wordpress/theme-review-action@trunk
       with:
+        root-folder: './'
         accessible-ready: true
         ui-debug: true
 
