--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -8,11 +8,17 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout code
-              uses: actions/checkout@v2
+              uses: actions/checkout@v4
+
             - name: Install dependencies
               run: composer install --prefer-dist --no-progress
-            - name: PHPCS check
-              uses: chekalsky/phpcs-action@v1
+
+            - name: Setup PHP
+              uses: shivammathur/setup-php@v2
               with:
-                  phpcs_bin_path: './vendor/bin/phpcs'
-                  enable_warnings: true
+                  php-version: '8.2'
+                  coverage: none
+                  tools: cs2pr, phpcs
+
+            - name: Run phpcs
+              run: phpcs -q --report=checkstyle src | cs2pr
