--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -20,7 +20,8 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 14
+                  node-version-file: '.nvmrc'
+                  cache: npm
 
             - name: Install dependencies
               run: npm ci
