WDSBT-7 - Add node version

--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -20,8 +20,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version-file: '.nvmrc'
-                  cache: npm
+                  node-version: 20
 
             - name: Install dependencies
               run: npm ci
