--- a/.github/workflows/assertions.yml
+++ b/.github/workflows/assertions.yml
@@ -24,8 +24,7 @@ jobs:
             - name: Setup Node
               uses: actions/setup-node@v4
               with:
-                  node-version-file: '.nvmrc'
-                  cache: npm
+                  node-version: 20
 
             - name: Install Node dependencies
               run: npm ci
