--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,10 +4,10 @@ pre-commit:
     commands:
         formatphp:
             glob: '*.php'
-            run: ./vendor/bin/phpcbf {staged_files}
+            run: composer run-script format {staged_files}
         lintphp:
             glob: '*.php'
-            run: ./vendor/bin/phpcs {staged_files}
+            run: composer run-script lint {staged_files}
         formatstyles:
             glob: '*.{css,scss}'
             run: npx prettier {staged_files} --write
