--- a/lefthook.yml
+++ b/lefthook.yml
@@ -20,8 +20,6 @@ pre-commit:
         lintjavascript:
             glob: '*.{js,ts,tsx}'
             run: npx eslint {staged_files} --fix
-        a11y:
-            run: npm run a11y
         other:
             glob: '*.{yml,json,html}'
             exclude: 'group_*.json' # Exclude specific files
@@ -42,3 +40,11 @@ pre-commit:
         templates-exclude:
             glob: 'templates/**' # Match all files and subdirectories within templates folder
             run: echo "Skipping templates folder"
+
+push:
+  commands:
+    a11y:
+      run: |
+        if [ "$LEFTHOOK_EVENT" = "push" ]; then
+          npm run a11y
+        fi
