Update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,12 @@
 {
-	"phpsab.executablePathCS": "./vendor/bin/phpcs",
-	"phpsab.executablePathCBF": "./vendor/bin/phpcbf",
-	"editor.formatOnSave": true,
-	"scss.validate": false,
-	"[javascriptreact]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	},
-	"intelephense.format.enable": false,
-	"intelephense.stubs": ["acf", "wordpress", "standard", "Core", "pcre"],
+	"phpcs.enable": true,
+	"phpcs.executablePath": "/vendor/bin/phpcs",
+	"phpcs.standard": "WordPress",
+	"phpcbf.enable": true,
+	"phpcbf.documentFormattingProvider": true,
+	"phpcbf.onsave": true,
+	"phpcbf.executablePath": "/vendor/bin/phpcbf",
+	"phpcbf.standard": "WordPress",
 
 	"workbench.colorCustomizations": {
 		"activityBar.background": "#3F4040",
@@ -15,30 +14,5 @@
 		"activityBarBadge.foreground": "#fff",
 		"statusBar.background": "#f3713c",
 		"statusBar.foreground": "#fff"
-	},
-
-	"markdownlint.config": {
-		"MD033": {
-			"allowed_elements": [
-				"nobr",
-				"hr",
-				"sup",
-				"details",
-				"summary",
-				"h2",
-				"h3",
-				"p",
-				"a",
-				"b",
-				"ol",
-				"ul",
-				"li",
-				"br",
-				"i",
-				"img",
-				"code"
-			]
-		}
-	},
-	"svn.ignoreMissingSvnWarning": true
+	}
 }
