--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,12 @@
 {
 	"recommendations": [
-		"dbaeumer.vscode-eslint",
-		"editorconfig.editorconfig",
-		"esbenp.prettier-vscode",
+		"shevaua.phpcs",
+		"persoderlind.vscode-phpcbf",
 		"stylelint.vscode-stylelint",
-		"valeryanm.vscode-phpsab"
+		"dbaeumer.vscode-eslint",
+		"esbenp.prettier-vscode",
+		"matthiashunt.wordpress-syntax-highlighter",
+		"johnbillion.vscode-wordpress-hooks",
+		"editorconfig.editorconfig"
 	]
 }
