--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
 		},
 		"allow-plugins": {
 			"composer/installers": true,
-			"dealerdirect/phpcodesniffer-composer-installer": true
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"squizlabs/php_codesniffe": true,
+			"wp-coding-standards/wpcs": true
 		},
 		"sort-packages": true
 	},
@@ -25,12 +27,13 @@
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
 		"phpcompatibility/phpcompatibility-wp": "^2.1.4",
+		"squizlabs/php_codesniffer": "^3.10.1",
 		"wp-cli/wp-cli-bundle": "^2.10.0",
 		"wp-coding-standards/wpcs": "^3.1.0"
 	},
 	"scripts": {
-		"format-php": "./vendor/bin/phpcbf --report=summary,source",
-		"lint-php": "./vendor/bin/phpcs --report=summary,source",
+		"fix": "./vendor/bin/phpcbf --report=summary,source",
+		"lint": "./vendor/bin/phpcs --report=summary,source",
 		"report": "./vendor/bin/phpcs --report=full --report-file=phpcs-report.txt"
 	}
 }
