--- a/package.json
+++ b/package.json
@@ -22,60 +22,68 @@
 		"npm": ">=10"
 	},
 	"dependencies": {
-		"@wordpress/eslint-plugin": "^18.0.0",
-		"@wordpress/scripts": "^27.8.0",
-		"clean-webpack-plugin": "^4.0.0",
-		"copy-webpack-plugin": "^12.0.2",
-		"cross-env": "^7.0.3",
-		"css-minimizer-webpack-plugin": "^6.0.0",
-		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-webpack-plugin": "^4.1.0",
-		"imagemin-svgo": "^10.0.1",
-		"imagemin-webpack-plugin": "^2.4.2",
-		"postcss-loader": "^8.1.1",
-		"postcss-move-props-to-bg-image-query": "^4.0.0",
-		"postcss-preset-env": "^9.5.5",
-		"sass-loader": "^14.2.1",
-		"stylelint-config-prettier": "^9.0.5",
-		"stylelint-webpack-plugin": "^5.0.0",
-		"svg-spritemap-webpack-plugin": "^4.5.0",
-		"svg-transform-loader": "^2.0.13"
+		"@inquirer/prompts": "5.0.4",
+		"chalk": "5.3.0",
+		"commander": "12.1.0",
+		"copyfiles": "^2.4.1",
+		"execa": "9.1.0",
+		"fs-extra": "11.2.0",
+		"make-dir-cli": "4.0.0",
+		"markdown-table": "3.0.3",
+		"replace-in-file": "7.1.0",
+		"rimraf": "5.0.7"
 	},
 	"devDependencies": {
-		"@evilmartians/lefthook": "^1.6.10",
-		"@wordpress/prettier-config": "^3.14.0",
-		"autoprefixer": "^10.4.19",
-		"css-loader": "^7.1.1",
-		"glob": "^10.3.12",
-		"image-minimizer-webpack-plugin": "^4.0.0",
-		"imagemin": "^8.0.1",
-		"mini-css-extract-plugin": "^2.9.0",
-		"npm-run-all": "^4.1.5",
-		"pa11y-ci": "^3.1.0",
-		"pa11y-ci-reporter-html": "^6.0.2",
-		"postcss": "^8.4.38",
-		"webpack-cli": "^5.1.4",
-		"webpack-merge": "^5.10.0"
+		"@babel/plugin-transform-class-static-block": "7.24.6",
+		"@evilmartians/lefthook": "1.6.12",
+		"@wordpress/env": "9.10.0",
+		"@wordpress/prettier-config": "3.15.0",
+		"@wordpress/scripts": "^27.9.0",
+		"clean-webpack-plugin": "4.0.0",
+		"copy-webpack-plugin": "12.0.2",
+		"cross-env": "7.0.3",
+		"eslint-plugin-eslint-comments": "3.2.0",
+		"eslint-webpack-plugin": "4.2.0",
+		"glob": "^10.4.1",
+		"html_codesniffer": "2.5.1",
+		"inquirer": "9.2.22",
+		"lint-staged": "15.2.4",
+		"mini-css-extract-plugin": "2.9.0",
+		"npm-run-all": "4.1.5",
+		"postcss-move-props-to-bg-image-query": "4.0.0",
+		"postcss-preset-env": "9.5.14",
+		"puppeteer-core": "22.10.0",
+		"stylelint-webpack-plugin": "5.0.1"
 	},
 	"scripts": {
-		"a11y": "pa11y-ci --config .pa11yci",
-		"build": "cross-env NODE_ENV=production wp-scripts build --config webpack.prod.js",
-		"build:all": "composer install --quiet && composer run-script pot && npm run build",
-		"build:pot": "composer run-script pot",
-		"clean": "rm -rf node_modules && rm -rf vendor && rm -f package-lock.json && rm -f composer.lock",
-		"format": "run-p format:*",
-		"format-php": "composer run-script format-php",
-		"format:css": "npx prettier '**/*.scss' --write && npm run lint:css -- --fix",
-		"format:js": "wp-scripts format && npm run lint:js -- --fix",
+		"a11y": "pa11y-ci",
+		"build": "wp-scripts build assets/index.js --output-path=build",
+		"format": "wp-scripts format && npm run format:php",
+		"format:css": "wp-scripts format-style",
+		"format:php": "composer run-script fix",
 		"lint": "run-p lint:*",
-		"lint-php": "composer run-script lint-php",
-		"lint:css": "wp-scripts lint-style '**/*.scss'",
+		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
+		"lint:md:docs": "wp-scripts lint-md-docs",
+		"lint:php": "composer run-script lint",
+		"lint:pkg-json": "wp-scripts lint-pkg-json",
 		"packages-update": "wp-scripts packages-update",
 		"postinstall": "npx lefthook install",
 		"preinstall": ". ~/.nvm/nvm.sh && nvm install && nvm use",
 		"report": "composer run-script report",
-		"setup": "npm run clean && npm i && composer i",
-		"start": "cross-env NODE_ENV=development wp-scripts start --config webpack.prod.js"
+		"reset": "rm -rf node_modules vendor && rm -f package-lock.json composer.lock",
+		"setup": "npm run reset && npm i && composer i",
+		"start": "wp-scripts start"
+	},
+	"lint-staged": {
+		"*.js": [
+			"wp-scripts lint-js"
+		],
+		"*.php": [
+			"composer run lint"
+		],
+		"*.scss": [
+			"wp-scripts lint-style"
+		]
 	}
 }
