--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,38 +1,37 @@
 {
-	"extends": [
-		"@wordpress/stylelint-config/scss",
-		"stylelint-config-prettier"
-	],
-	"rules": {
-		"at-rule-empty-line-before": null,
-		"declaration-colon-newline-after": null,
-		"declaration-no-important": true,
-		"function-parentheses-space-inside": null,
-		"no-descending-specificity": null,
-		"rule-empty-line-before": null,
-		"selector-pseudo-class-parentheses-space-inside": null,
-		"selector-class-pattern": null,
-		"scss/at-rule-no-unknown": [
-			true,
-			{
-				"ignoreAtRules": [
-					"apply",
-					"layer",
-					"variants",
-					"responsive",
-					"screen"
-				]
-			}
-		],
-		"string-quotes": "single",
-		"declaration-property-unit-allowed-list": [
-			{
-				"font-size": ["em", "rem"],
-				"line-height": [],
-				"/^border/": ["px"],
-				"/^margin/": ["em", "rem"],
-				"/^padding/": ["em", "rem"]
-			}
-		]
-	}
+  "extends": [
+    "@wordpress/stylelint-config/scss"
+  ],
+  "rules": {
+    "at-rule-empty-line-before": null,
+    "declaration-colon-newline-after": null,
+    "declaration-no-important": true,
+    "function-parentheses-space-inside": null,
+    "no-descending-specificity": null,
+    "rule-empty-line-before": null,
+    "selector-pseudo-class-parentheses-space-inside": null,
+    "selector-class-pattern": null,
+    "scss/at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "apply",
+          "layer",
+          "variants",
+          "responsive",
+          "screen"
+        ]
+      }
+    ],
+    "string-quotes": "single",
+    "declaration-property-unit-allowed-list": [
+      {
+        "font-size": ["em", "rem"],
+        "line-height": [],
+        "/^border/": ["px"],
+        "/^margin/": ["em", "rem"],
+        "/^padding/": ["em", "rem"]
+      }
+    ]
+  }
 }
