--- a/.github/workflows/assertions.yml
+++ b/.github/workflows/assertions.yml
@@ -70,7 +70,8 @@ jobs:
             - name: Setup Node
               uses: actions/setup-node@v4
               with:
-                  node-version-file: .nvmrc
+                  node-version: 20.12.2
+                  cache: npm
 
             - name: Check Node version
               run: node -v
@@ -97,7 +98,8 @@ jobs:
             - name: Setup Node
               uses: actions/setup-node@v4
               with:
-                  node-version-file: .nvmrc
+                  node-version: 20.12.2
+                  cache: npm
 
             - name: Check Node version
               run: node -v
