--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
 		"node": ">=20",
 		"npm": ">=10"
 	},
-	"dependencies": {
-	},
 	"devDependencies": {
 		"@babel/plugin-transform-class-static-block": "7.24.6",
 		"@evilmartians/lefthook": "1.6.12",
 		"@wordpress/env": "9.10.0",
+		"@wordpress/eslint-plugin": "^18.1.0",
 		"@wordpress/prettier-config": "3.15.0",
 		"@wordpress/scripts": "^27.9.0",
+		"autoprefixer": "^10.4.19",
 		"clean-webpack-plugin": "^4.0.0",
 		"copy-webpack-plugin": "^12.0.2",
 		"cross-env": "^7.0.3",
 		"eslint-plugin-eslint-comments": "3.2.0",
+		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-webpack-plugin": "^4.2.0",
 		"glob": "^10.4.1",
 		"html_codesniffer": "2.5.1",
@@ -43,8 +44,9 @@
 		"postcss-loader": "^8.1.1",
 		"postcss-move-props-to-bg-image-query": "^4.0.0",
 		"postcss-preset-env": "^9.5.5",
+		"postcss-rtl": "^2.0.0",
+		"prettier": "3.2.5",
 		"puppeteer-core": "22.10.0",
-		"rtlcss-webpack-plugin": "4.0.7",
 		"sass-loader": "^14.2.1",
 		"stylelint-webpack-plugin": "^5.0.1",
 		"svg-transform-loader": "^2.0.13",
