--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint-webpack-plugin": "^4.2.0",
 		"glob": "^10.4.1",
 		"html_codesniffer": "2.5.1",
+		"image-webpack-loader": "^8.1.0",
 		"inquirer": "^9.2.22",
 		"lint-staged": "15.2.4",
 		"mini-css-extract-plugin": "^2.9.0",
@@ -49,6 +50,7 @@
 		"puppeteer-core": "22.10.0",
 		"sass-loader": "^14.2.1",
 		"stylelint-webpack-plugin": "^5.0.1",
+		"svg-spritemap-webpack-plugin": "^4.5.0",
 		"svg-transform-loader": "^2.0.13",
 		"webpack-cli": "^5.1.4"
 	},
